--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 REACT_APP_INFURA_ID=INFURA_ID
 
-REACT_APP_DEFAULT_NETWORK_ID=1
+REACT_APP_DEFAULT_NETWORK_ID=100
 
 REACT_APP_CTE_GRAPH_HTTP_MAINNET='https://api.thegraph.com/subgraphs/name/cag/hg'
 REACT_APP_CTE_GRAPH_HTTP_RINKEBY='https://api.thegraph.com/subgraphs/name/cag/hg-rinkeby'
 REACT_APP_CTE_GRAPH_HTTP_GANACHE='http://localhost:8000/subgraphs/name/gnosis/hg'
-REACT_APP_CTE_GRAPH_HTTP_XDAI='https://api.thegraph.com/subgraphs/name/davidalbela/conditional-tokens-xdai'
+REACT_APP_CTE_GRAPH_HTTP_XDAI='https://api.thegraph.com/subgraphs/name/gnosis/conditional-tokens-gc'
 
 REACT_APP_OMEN_GRAPH_HTTP_MAINNET='https://api.thegraph.com/subgraphs/name/protofire/omen'
 REACT_APP_OMEN_GRAPH_HTTP_RINKEBY='https://api.thegraph.com/subgraphs/name/protofire/omen-rinkeby'
@@ -34,7 +34,8 @@ REACT_APP_CONDITIONAL_TOKEN_CONTRACT_ADDRESS_FOR_XDAI='0xCeAfDD6bc0bEF976fdCd111
 REACT_APP_REALITY_CONTRACT_ADDRESS_FOR_MAINNET='0x325a2e0f3cca2ddbaebb4dfc38df8d19ca165b47'
 REACT_APP_REALITY_CONTRACT_ADDRESS_FOR_RINKEBY='0x3D00D77ee771405628a4bA4913175EcC095538da'
 REACT_APP_REALITY_CONTRACT_ADDRESS_FOR_GANACHE='0xcfeb869f69431e42cdb54a4f4f105c19c080a601'
-REACT_APP_REALITY_CONTRACT_ADDRESS_FOR_XDAI='0x79e32aE03fb27B07C89c0c568F80287C01ca2E57'
+#Reality V3
+REACT_APP_REALITY_CONTRACT_ADDRESS_FOR_XDAI='0xE78996A233895bE74a66F451f1019cA9734205cc'
 
 REACT_APP_WRAPPED_1155_FACTORY_CONTRACT_ADDRESS_FOR_MAINNET='0xc14f5d2B9d6945EF1BA93f8dB20294b90FA5b5b1'
 REACT_APP_WRAPPED_1155_FACTORY_CONTRACT_ADDRESS_FOR_RINKEBY='0xc14f5d2B9d6945EF1BA93f8dB20294b90FA5b5b1'
@@ -51,12 +52,14 @@ REACT_APP_ORACLE_KLEROS_ADDRESS_XDAI='0x0000000000000000000000000000000000000000
 REACT_APP_ORACLE_REALITY_ADDRESS_MAINNET='0x0e414d014a77971f4eaa22ab58e6d84d16ea838e'
 REACT_APP_ORACLE_REALITY_ADDRESS_RINKEBY='0x17174dC1b62add32a1DE477A357e75b0dcDEed6E'
 REACT_APP_ORACLE_REALITY_ADDRESS_GANACHE='0xDb56f2e9369E0D7bD191099125a3f6C370F8ed15'
-REACT_APP_ORACLE_REALITY_ADDRESS_XDAI='0xAB16D643bA051C11962DA645f74632d3130c81E2'
+#deploy proxy v3
+REACT_APP_ORACLE_REALITY_ADDRESS_XDAI='0xbc039d70570df82c03d7bb48efbe323d673765f6'
 
 // Arbitrator Kleros
 REACT_APP_ARBITRATOR_KLEROS_ADDRESS_MAINNET='0xd47f72a2d1d0E91b0Ec5e5f5d02B2dc26d00A14D'
 REACT_APP_ARBITRATOR_KLEROS_ADDRESS_RINKEBY='0xcafa054b1b054581faf65adce667bf1c684b6ef0'
 REACT_APP_ARBITRATOR_KLEROS_ADDRESS_GANACHE='0x0000000000000000000000000000000000000000'
+#pending kleros arbitrator
 REACT_APP_ARBITRATOR_KLEROS_ADDRESS_XDAI='0xe40DD83a262da3f56976038F1554Fe541Fa75ecd'
 
 // Arbitrator reality
@@ -73,7 +76,7 @@ REACT_APP_CONFIRMATIONS_TO_WAIT=2
 REACT_APP_GOOGLE_ANALYTICS_ID='id'
 
 # timeout in seconds for realitio answers, 86400 is one day
-REACT_APP_REALITY_TIMEOUT=86400
+REACT_APP_REALITY_TIMEOUT=60
 
 # Min and max outcomes allowed
 REACT_APP_MIN_OUTCOMES_ALLOWED=2
