--- a/docker/hg-subgraph/Dockerfile
+++ b/docker/hg-subgraph/Dockerfile
@@ -4,6 +4,7 @@ ENV PATH="./node_modules/.bin:${PATH}"
 
 COPY create_subgraph.sh ./
 COPY setup-migration.sh ./
+COPY create-gnosis-account.sh ./
 
 # Install system dependencies
 RUN apk --update add \
@@ -14,7 +15,8 @@ RUN apk --update add \
     g++ \
     libsecret-dev \
     pkgconfig \
-    libc6-compat && \
+    libc6-compat \
+    jq && \
     rm -rf /var/cache/apk/*
 
 # Verify libsecret configuration
@@ -23,8 +25,10 @@ RUN pkg-config --libs-only-l libsecret-1
 # Install ganache-cli globally
 RUN npm install -g ganache-cli
 
-# Make the script executable
-RUN chmod +x create_subgraph.sh
+# Make the scripts executable
+RUN chmod +x create_subgraph.sh && \
+    chmod +x create-gnosis-account.sh && \
+    chmod +x setup-migration.sh
 
 # Clone and setup hg-subgraph with all required dependencies
 RUN git clone https://github.com/nicscl/hg-subgraph.git && \
@@ -33,5 +37,4 @@ RUN git clone https://github.com/nicscl/hg-subgraph.git && \
     npm install @realitio/realitio-contracts@2.1.2 && \
     cd -
 
-# CMD ["./create_subgraph.sh"]
 CMD ["bash"]
