--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   graph-node:
     image: graphprotocol/graph-node
@@ -12,7 +11,7 @@ services:
       postgres_db: postgres
       ipfs: 'ipfs:5001'
       ethereum: 'xdai:https://rpc.ankr.com/gnosis' 
-      GRAPH_LOG: info
+      GRAPH_LOG: debug
       GRAPH_ALLOW_NON_DETERMINISTIC_IPFS: 'true'
       POSTGRES_INITDB_ARGS: "--locale=C --encoding=UTF8"
       LC_COLLATE: C
